--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/haversine": "^1.1.8",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.11.24",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
@@ -37,6 +38,7 @@
     "express": "^5.1.0",
     "haversine": "^1.1.1",
     "node-fetch": "2.7.0",
+    "uuid": "^11.1.0",
     "zstd-codec": "^0.1.5"
   }
 }
